fixed overflow problems

--- a/WhatTheHack/static/styles/wth.css
+++ b/WhatTheHack/static/styles/wth.css
@@ -10,8 +10,11 @@
   display: flex;
   justify-content: center;
 }
-
-
+.content-container{
+  width: 90%;
+  min-width: 100%;
+  margin:0px 10px;
+}
 
 h1,h2,p{
   font-family: 'Montserrat', sans-serif;
@@ -21,6 +24,7 @@ h1,h2,p{
 
 html, body {
   height: 100%;
+  overflow-x: hidden;
 }
 
 b{
